--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "astro": "^5.3.0"
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.0.6",
+    "astro": "^5.3.0",
+    "daisyui": "^5.0.0-beta.8",
+    "tailwindcss": "^4.0.6"
   }
 }
