--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.6",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "astro": "^5.3.0",
     "daisyui": "^5.0.0-beta.8",
+    "eslint": "^9.20.1",
+    "eslint-plugin-astro": "^1.3.1",
     "tailwindcss": "^4.0.6"
   }
 }
