--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,3 +32,26 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+      - name: Install Dependencies
+        run: npm install
+      - name: Cache Playwright Browsers
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/ms-playwright
+          key: ${{ runner.os }}-playwright-${{ hashFiles('**/frontend/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-playwright-
+      - name: Setup playwright
+        run: npx playwright install
+      - name: Build
+        run: npm run build
+      - name: Tests
+        run: npx playwright test
