--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@playwright/test": "^1.50.1",
     "@tailwindcss/vite": "^4.0.6",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "astro": "^5.3.0",
     "daisyui": "^5.0.0-beta.8",
+    "dotenv": "^16.4.7",
     "eslint": "^9.20.1",
     "eslint-plugin-astro": "^1.3.1",
     "tailwindcss": "^4.0.6"
