--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "@playwright/test": "^1.54.2",
-    "@tailwindcss/vite": "^4.1.11",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "astro": "^5.12.9",
-    "daisyui": "^5.0.50",
-    "dotenv": "^17.2.1",
-    "eslint": "^9.30.1",
-    "eslint-plugin-astro": "^1.3.1",
-    "tailwindcss": "^4.1.11"
+    "@playwright/test": "1.54.2",
+    "@tailwindcss/vite": "4.1.11",
+    "@typescript-eslint/eslint-plugin": "8.39.1",
+    "@typescript-eslint/parser": "8.39.1",
+    "astro": "5.12.9",
+    "daisyui": "5.0.50",
+    "dotenv": "17.2.1",
+    "eslint": "9.33.0",
+    "eslint-plugin-astro": "1.3.1",
+    "tailwindcss": "4.1.11"
   }
 }
