--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "17.2.2",
     "eslint": "9.35.0",
     "eslint-plugin-astro": "1.3.1",
+    "sharp": "0.34.3",
     "tailwindcss": "4.1.13"
   }
 }
